--- a/playbooks/manage_service.yml
+++ b/playbooks/manage_service.yml
@@ -4,13 +4,21 @@
   become: yes
   vars:
     service_name: ""  # Default service name
+    service_state: ""
+    service_enabled: ""
   tasks:
     - name: Ensure service_name is provided
       fail:
         msg: "You must provide a service name"
       when: service_name == ""
+    
+    - name: Ensure service_state is provided
+      fail:
+        msg: "You must provide a service state"
+      when: service_state == ""
 
     - name: manage service
       service:
         name: "{{ service_name }}"
         state: "{{ service_state }}"
+        enabled: "{{ service_enabled | default(True) }}"
