--- a/playbooks/roles/manage_service/tasks/main.yml
+++ b/playbooks/roles/manage_service/tasks/main.yml
@@ -13,6 +13,7 @@
   service:
     name: "{{ service_name }}"
     state: "{{ service_state }}"
+    enabled: "{{ service_enabled }}"
   when: ansible_os_family == "Debian"
   tags: debian
 
@@ -20,6 +21,7 @@
   service:
     name: "{{ service_name }}"
     state: "{{ service_state }}"
+    enabled: "{{ service_enabled }}"
   when: ansible_os_family == "RedHat"
   tags: redhat
 
@@ -27,6 +29,7 @@
   service:
     name: "{{ service_name }}"
     state: "{{ service_state }}"
+    enabled: "{{ service_enabled }}"
   when: ansible_os_family == "Suse"
   tags: suse
 
@@ -34,5 +37,6 @@
   service:
     name: "{{ service_name }}"
     state: "{{ service_state }}"
+    enabled: "{{ service_enabled }}"
   when: ansible_os_family == "Archlinux"
   tags: archlinux
