--- a/playbooks/roles/manage_service/tasks/main.yml
+++ b/playbooks/roles/manage_service/tasks/main.yml
@@ -13,7 +13,7 @@
   service:
     name: "{{ service_name }}"
     state: "{{ service_state }}"
-    enabled: "{{ service_enabled }}"
+    enabled: "{{ service_enabled | bool }}"
   when: ansible_os_family == "Debian"
   tags: debian
 
@@ -21,7 +21,7 @@
   service:
     name: "{{ service_name }}"
     state: "{{ service_state }}"
-    enabled: "{{ service_enabled }}"
+    enabled: "{{ service_enabled | bool }}"
   when: ansible_os_family == "RedHat"
   tags: redhat
 
@@ -29,7 +29,7 @@
   service:
     name: "{{ service_name }}"
     state: "{{ service_state }}"
-    enabled: "{{ service_enabled }}"
+    enabled: "{{ service_enabled | bool }}"
   when: ansible_os_family == "Suse"
   tags: suse
 
@@ -37,6 +37,6 @@
   service:
     name: "{{ service_name }}"
     state: "{{ service_state }}"
-    enabled: "{{ service_enabled }}"
+    enabled: "{{ service_enabled | bool }}"
   when: ansible_os_family == "Archlinux"
   tags: archlinux
